assignment1/assignment1/initial/target/main/csel/parser/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elif'", "'Else'", "'While'", "'For'", "'Of'", 
                     "'In'", "'Function'", "'Let'", "'True'", "'False'", 
                     "'Call'", "'Return'", "'Number'", "'Boolean'", "'String'", 
                     "'JSON'", "'Array'", "'Constant'", "'+'", "'-'", "'/'", 
                     "'%'", "'*'", "'='", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'!'", "'&&'", "'||'", "'+.'", "'==.'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "ID", "NUMBER_LITERAL", 
                      "BOOLEAN_LITERAL", "STRING_LITERAL", "BREAK", "CONTINUE", 
                      "IF", "ELIF", "ELSE", "WHILE", "FOR", "OF", "IN", 
                      "FUNCTION", "LET", "TRUE", "FALSE", "CALL", "RETURN", 
                      "NUMBER", "BOOLEAN", "STRING", "JSON", "ARRAY", "CONSTANT", 
                      "ADD", "SUB", "DIV", "MOD", "MUL", "ASSIGN", "EQ", 
                      "NOT_EQ", "LESS_T", "GREAT_T", "LESS_E", "GREAT_E", 
                      "NOT", "AND", "OR", "ADD_STR", "COMPARE_STR", "LP", 
                      "RP", "LCB", "RCB", "LSB", "RSB", "SM", "CM", "CL", 
                      "DOT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_var_decl = 2
    RULE_var_glo_decl = 3
    RULE_var_loc_decl = 4
    RULE_glo_constant_decl = 5
    RULE_loc_constant_decl = 6
    RULE_list_var = 7
    RULE_list_index = 8
    RULE_func_decl = 9
    RULE_list_parameters = 10
    RULE_parameter = 11
    RULE_body = 12
    RULE_bodystmt = 13
    RULE_stmtList = 14
    RULE_stmt = 15
    RULE_if_stmt = 16
    RULE_list_elif = 17
    RULE_else_stmt = 18
    RULE_assign_stmt = 19
    RULE_forIn_stmt = 20
    RULE_forOf_stmt = 21
    RULE_while_stmt = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_call_stmt = 25
    RULE_list_exp = 26
    RULE_return_stmt = 27
    RULE_lhs = 28
    RULE_exp = 29
    RULE_exp1 = 30
    RULE_exp2 = 31
    RULE_exp3 = 32
    RULE_exp4 = 33
    RULE_exp5 = 34
    RULE_index_exp = 35
    RULE_key = 36
    RULE_list_key = 37
    RULE_exp7 = 38
    RULE_operands = 39
    RULE_func_call = 40
    RULE_literal = 41
    RULE_array_literal = 42
    RULE_element = 43
    RULE_list_elements = 44
    RULE_json_literal = 45
    RULE_primitive_types = 46

    ruleNames =  [ "program", "decllist", "var_decl", "var_glo_decl", "var_loc_decl", 
                   "glo_constant_decl", "loc_constant_decl", "list_var", 
                   "list_index", "func_decl", "list_parameters", "parameter", 
                   "body", "bodystmt", "stmtList", "stmt", "if_stmt", "list_elif", 
                   "else_stmt", "assign_stmt", "forIn_stmt", "forOf_stmt", 
                   "while_stmt", "break_stmt", "continue_stmt", "call_stmt", 
                   "list_exp", "return_stmt", "lhs", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "index_exp", "key", "list_key", 
                   "exp7", "operands", "func_call", "literal", "array_literal", 
                   "element", "list_elements", "json_literal", "primitive_types" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    ID=3
    NUMBER_LITERAL=4
    BOOLEAN_LITERAL=5
    STRING_LITERAL=6
    BREAK=7
    CONTINUE=8
    IF=9
    ELIF=10
    ELSE=11
    WHILE=12
    FOR=13
    OF=14
    IN=15
    FUNCTION=16
    LET=17
    TRUE=18
    FALSE=19
    CALL=20
    RETURN=21
    NUMBER=22
    BOOLEAN=23
    STRING=24
    JSON=25
    ARRAY=26
    CONSTANT=27
    ADD=28
    SUB=29
    DIV=30
    MOD=31
    MUL=32
    ASSIGN=33
    EQ=34
    NOT_EQ=35
    LESS_T=36
    GREAT_T=37
    LESS_E=38
    GREAT_E=39
    NOT=40
    AND=41
    OR=42
    ADD_STR=43
    COMPARE_STR=44
    LP=45
    RP=46
    LCB=47
    RCB=48
    LSB=49
    RSB=50
    SM=51
    CM=52
    CL=53
    DOT=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    UNTERMINATED_COMMENT=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(CSELParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.decllist()
            self.state = 95
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_declContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Func_declContext)
            else:
                return self.getTypedRuleContext(CSELParser.Func_declContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = CSELParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.LET or _la==CSELParser.CONSTANT:
                self.state = 97
                self.var_decl()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.FUNCTION:
                self.state = 103
                self.func_decl()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def glo_constant_decl(self):
            return self.getTypedRuleContext(CSELParser.Glo_constant_declContext,0)


        def var_glo_decl(self):
            return self.getTypedRuleContext(CSELParser.Var_glo_declContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = CSELParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.glo_constant_decl()
                pass
            elif token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.var_glo_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_glo_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def list_var(self):
            return self.getTypedRuleContext(CSELParser.List_varContext,0)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_var_glo_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_glo_decl" ):
                return visitor.visitVar_glo_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_glo_decl(self):

        localctx = CSELParser.Var_glo_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_glo_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(CSELParser.LET)
            self.state = 114
            self.list_var()
            self.state = 115
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_loc_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def list_var(self):
            return self.getTypedRuleContext(CSELParser.List_varContext,0)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_var_loc_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_loc_decl" ):
                return visitor.visitVar_loc_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_loc_decl(self):

        localctx = CSELParser.Var_loc_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_loc_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(CSELParser.LET)
            self.state = 118
            self.list_var()
            self.state = 119
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glo_constant_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def list_var(self):
            return self.getTypedRuleContext(CSELParser.List_varContext,0)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_glo_constant_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlo_constant_decl" ):
                return visitor.visitGlo_constant_decl(self)
            else:
                return visitor.visitChildren(self)




    def glo_constant_decl(self):

        localctx = CSELParser.Glo_constant_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_glo_constant_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(CSELParser.CONSTANT)
            self.state = 122
            self.list_var()
            self.state = 123
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loc_constant_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def list_var(self):
            return self.getTypedRuleContext(CSELParser.List_varContext,0)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_loc_constant_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoc_constant_decl" ):
                return visitor.visitLoc_constant_decl(self)
            else:
                return visitor.visitChildren(self)




    def loc_constant_decl(self):

        localctx = CSELParser.Loc_constant_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loc_constant_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CSELParser.CONSTANT)
            self.state = 126
            self.list_var()
            self.state = 127
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def CM(self):
            return self.getToken(CSELParser.CM, 0)

        def list_var(self):
            return self.getTypedRuleContext(CSELParser.List_varContext,0)


        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(CSELParser.LiteralContext,0)


        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def CL(self):
            return self.getToken(CSELParser.CL, 0)

        def primitive_types(self):
            return self.getTypedRuleContext(CSELParser.Primitive_typesContext,0)


        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def list_index(self):
            return self.getTypedRuleContext(CSELParser.List_indexContext,0)


        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_list_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_var" ):
                return visitor.visitList_var(self)
            else:
                return visitor.visitChildren(self)




    def list_var(self):

        localctx = CSELParser.List_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_var)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(CSELParser.ID)
                self.state = 130
                self.match(CSELParser.CM)
                self.state = 131
                self.list_var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(CSELParser.ID)
                self.state = 133
                self.match(CSELParser.ASSIGN)
                self.state = 136
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 134
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 135
                    self.exp()
                    pass


                self.state = 138
                self.match(CSELParser.CM)
                self.state = 139
                self.list_var()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(CSELParser.ID)
                self.state = 142
                self.match(CSELParser.CL)
                self.state = 143
                self.primitive_types()
                self.state = 144
                self.match(CSELParser.ASSIGN)
                self.state = 147
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 145
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 146
                    self.exp()
                    pass


                self.state = 149
                self.match(CSELParser.CM)
                self.state = 150
                self.list_var()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(CSELParser.ID)
                self.state = 153
                self.match(CSELParser.CL)
                self.state = 154
                self.primitive_types()
                self.state = 155
                self.match(CSELParser.ASSIGN)
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 156
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 157
                    self.exp()
                    pass


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 160
                self.match(CSELParser.ID)
                self.state = 161
                self.match(CSELParser.CL)
                self.state = 162
                self.primitive_types()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 163
                self.match(CSELParser.CM)
                self.state = 164
                self.list_var()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 165
                self.match(CSELParser.ID)
                self.state = 166
                self.match(CSELParser.CL)
                self.state = 167
                self.primitive_types()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 168
                self.match(CSELParser.ID)
                self.state = 169
                self.match(CSELParser.ASSIGN)
                self.state = 172
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 170
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 171
                    self.exp()
                    pass


                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 174
                self.match(CSELParser.ID)
                self.state = 175
                self.match(CSELParser.LSB)
                self.state = 176
                self.list_index()
                self.state = 177
                self.match(CSELParser.RSB)
                self.state = 178
                self.match(CSELParser.ASSIGN)
                self.state = 181
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 179
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 180
                    self.exp()
                    pass


                self.state = 183
                self.match(CSELParser.CM)
                self.state = 184
                self.list_var()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 186
                self.match(CSELParser.ID)
                self.state = 187
                self.match(CSELParser.LSB)
                self.state = 188
                self.list_index()
                self.state = 189
                self.match(CSELParser.RSB)
                self.state = 190
                self.match(CSELParser.ASSIGN)
                self.state = 193
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 191
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 192
                    self.exp()
                    pass


                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 195
                self.match(CSELParser.ID)
                self.state = 196
                self.match(CSELParser.LSB)
                self.state = 197
                self.list_index()
                self.state = 198
                self.match(CSELParser.RSB)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 200
                self.match(CSELParser.ID)
                self.state = 201
                self.match(CSELParser.LSB)
                self.state = 202
                self.list_index()
                self.state = 203
                self.match(CSELParser.RSB)
                self.state = 204
                self.match(CSELParser.CM)
                self.state = 205
                self.list_var()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 207
                self.match(CSELParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_indexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_LITERAL(self):
            return self.getToken(CSELParser.NUMBER_LITERAL, 0)

        def CM(self):
            return self.getToken(CSELParser.CM, 0)

        def list_index(self):
            return self.getTypedRuleContext(CSELParser.List_indexContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_list_index

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_index" ):
                return visitor.visitList_index(self)
            else:
                return visitor.visitChildren(self)




    def list_index(self):

        localctx = CSELParser.List_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_index)
        try:
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 210
                self.match(CSELParser.NUMBER_LITERAL)
                self.state = 211
                self.match(CSELParser.CM)
                self.state = 212
                self.list_index()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 213
                self.match(CSELParser.NUMBER_LITERAL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LP(self):
            return self.getToken(CSELParser.LP, 0)

        def RP(self):
            return self.getToken(CSELParser.RP, 0)

        def LCB(self):
            return self.getToken(CSELParser.LCB, 0)

        def RCB(self):
            return self.getToken(CSELParser.RCB, 0)

        def list_parameters(self):
            return self.getTypedRuleContext(CSELParser.List_parametersContext,0)


        def body(self):
            return self.getTypedRuleContext(CSELParser.BodyContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = CSELParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.match(CSELParser.FUNCTION)
            self.state = 217
            self.match(CSELParser.ID)
            self.state = 218
            self.match(CSELParser.LP)
            self.state = 220
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ID:
                self.state = 219
                self.list_parameters()

